--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
+/* CSS styling for the project */
+h1 {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.coin-chest {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  gap: 5em;
+}
+.coin {
+  text-align: left;
+  width: auto;
+  border-radius: 25px;
+  display:inline-flex;
+  justify-content:space-evenly;
+  padding: 1em;
+  box-shadow: rgba(24, 23, 23, 0.2) 0px 2px 8px 0px;
+}
+.coin-spec {
+  text-align: left;
+  width: auto;
+  border-radius: 25px;
+  padding: 1em;
+  box-shadow: rgba(24, 23, 23, 0.2) 0px 2px 8px 0px;
+}
+img {
+  height: auto;
+  width: auto;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* Styling for individual cryptocurrency */
+.cryptocurrency-spec-container {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 2.5rem 20rem 2.5rem 20rem;
+  gap: 6em;
+}
+.coin-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  height: auto;
+}
+.coin-brand {
+  text-align: left;
+}
+.back {
+  text-align: center;
+  margin-bottom: 2em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section li{
+  padding-bottom:1em;
+  font-size: 20px;
 }
