--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,74 @@
 /* CSS styling for the project */
-h1 {
+
+body{
+  margin-left: auto;
+  margin-right: auto;
+  padding:2%;
+  font-family: roboto;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+/* CSS for the table */
+.table{
+  width: 50%;
+  border-collapse:separate;
+  border-radius:25px;
+}
+
+.table td,.table th{
+  margin-left: auto;
+  margin-right: auto;
+  padding:12px 25px;
+  border:1px solid rgb(36, 35, 35);
+  text-align: center;
+}
+
+.table tr:hover td {background:rgb(105, 200, 224)}
+
+.table th{
+  border-radius:9px;
+  background-color: rgb(54, 52, 52);
+  color:rgb(255, 255, 255);
+}
+
+.table tbody tr:nth-child(even){
+  background-color:rgba(110, 107, 107, 0.911);
+  color: white;
+}
+/* For responsiveness */
+
+@media(max-width: 500px) {
+  .table thead{
+    display: none;
+  }
+  .table, .table tbody, .table tr, .table td{
+    display: block;
+    width: 100%;
+  }
+  .table tr{
+    margin-bottom: 15px;
+  }
+  .table td{
+    text-align: center;
+    padding-left: auto;
+    position: relative;
+  }
+  .table td::before{
+    content: attr(label);
+    position: absolute;
+    left:0;
+    width: auto;
+    padding-left:25px;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: left;
+  }
+}
+
+h1, h4 {
   text-align: center;
 }
 .coin-chest {
@@ -8,15 +77,7 @@ h1 {
   flex-wrap: wrap;
   gap: 5em;
 }
-.coin {
-  text-align: left;
-  width: auto;
-  border-radius: 25px;
-  display:inline-flex;
-  justify-content:space-evenly;
-  padding: 1em;
-  box-shadow: rgba(24, 23, 23, 0.2) 0px 2px 8px 0px;
-}
+
 .coin-spec {
   text-align: left;
   width: auto;
@@ -25,8 +86,10 @@ h1 {
   box-shadow: rgba(24, 23, 23, 0.2) 0px 2px 8px 0px;
 }
 img {
-  height: auto;
-  width: auto;
+  width:50px; 
+  height:50px;
+  text-align:center; 
+  vertical-align:middle
 }
 
 
